[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "apiosk-mcp"
version = "1.3.2"
description = "PyPI launcher for the official Apiosk MCP server"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Apiosk" }
]
keywords = [
  "apiosk",
  "mcp",
  "model-context-protocol",
  "agent-tools",
  "payments",
  "finance",
  "x402",
  "commerce",
  "crypto"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries"
]

[project.urls]
Homepage = "https://apiosk.com"
Repository = "https://github.com/obcraft/apiosk-mcp"
Issues = "https://github.com/obcraft/apiosk-mcp/issues"

[project.scripts]
apiosk = "apiosk_mcp.cli:main"
apiosk-mcp = "apiosk_mcp.cli:main"
apiosk-mcp-server = "apiosk_mcp.cli:main"

[tool.setuptools.packages.find]
where = ["python"]
